--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 
 	<!------footer start--------->
 	<footer>
-		<p>Tahmid Ahmed</p>
-		<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
+		<p>Harikrishna M</p>
+		
 		<div class="social">
 			<a href="#"><i class="fab fa-facebook-f"></i></a>
 			<a href="#"><i class="fab fa-instagram"></i></a>
